--- a/src/CloudFileStatusManager/CloudFileStatusManager.csproj
+++ b/src/CloudFileStatusManager/CloudFileStatusManager.csproj
@@ -9,6 +9,20 @@
     <Authors>Wayne Koorts</Authors>
     <Copyright>Copyright (c) Wayne Koorts 2025</Copyright>
     <PackageId>com.wkoorts.$(AssemblyName)</PackageId>
+    <Description>A C# library for managing the hydration status of files on cloud drives like iCloud Drive or OneDrive.</Description>
+    <PackageProjectUrl>https://github.com/WayneKoorts/CloudFileStatusManager</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/WayneKoorts/CloudFileStatusManager</RepositoryUrl>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
