Add license acceptance requirement for packages.

--- a/src/CloudFileStatusManager/CloudFileStatusManager.csproj
+++ b/src/CloudFileStatusManager/CloudFileStatusManager.csproj
@@ -17,6 +17,7 @@
     <FileVersion>0.1.0.0</FileVersion>
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     <Version>$(AssemblyVersion)</Version>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
