--- a/src/CloudFileStatusManager.Windows/CloudFileStatusManager.Windows.csproj
+++ b/src/CloudFileStatusManager.Windows/CloudFileStatusManager.Windows.csproj
@@ -17,6 +17,7 @@
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
