Update CLI assembly name.

--- a/src/CloudFileStatusManager.CLI.Windows/CloudFileStatusManager.CLI.Windows.csproj
+++ b/src/CloudFileStatusManager.CLI.Windows/CloudFileStatusManager.CLI.Windows.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>$(AssemblyName)</PackageId>
+    <AssemblyName>cfsm</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
