--- a/src/CloudFileStatusManager.CLI.Windows/CloudFileStatusManager.CLI.Windows.csproj
+++ b/src/CloudFileStatusManager.CLI.Windows/CloudFileStatusManager.CLI.Windows.csproj
@@ -7,7 +7,12 @@
     <Nullable>enable</Nullable>
     <PackageId>$(AssemblyName)</PackageId>
     <AssemblyName>cfsm</AssemblyName>
+    <PublishAot>True</PublishAot>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CloudFileStatusManager.Windows\CloudFileStatusManager.Windows.csproj" />
