--- a/src/CloudFileStatusManager.CLI.Windows/CloudFileStatusManager.CLI.Windows.csproj
+++ b/src/CloudFileStatusManager.CLI.Windows/CloudFileStatusManager.CLI.Windows.csproj
@@ -9,8 +9,23 @@
     <Nullable>enable</Nullable>
     <PackageId>$(AssemblyName)</PackageId>
     <AssemblyName>cfsm</AssemblyName>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
     <PublishAot>False</PublishAot>
+    <Version>$(AssemblyVersion)</Version>
+    <Copyright>Copyright (c) Wayne Koorts 2025</Copyright>
+    <Authors>Wayne Koorts</Authors>
+    <PackageProjectUrl>https://github.com/WayneKoorts/CloudFileStatusManager</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/WayneKoorts/CloudFileStatusManager</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
