Enable symbol package generation.

--- a/src/CloudFileStatusManager.Windows/CloudFileStatusManager.Windows.csproj
+++ b/src/CloudFileStatusManager.Windows/CloudFileStatusManager.Windows.csproj
@@ -20,6 +20,8 @@
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <AssemblyName>$(MSBuildProjectName)</AssemblyName>
+    <IncludeSymbols>True</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
