--- a/src/CloudFileStatusManager/CloudFileStatusManager.csproj
+++ b/src/CloudFileStatusManager/CloudFileStatusManager.csproj
@@ -18,6 +18,8 @@
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     <Version>$(AssemblyVersion)</Version>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <IncludeSymbols>True</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
