--- a/src/CloudFileStatusManager/CloudFileStatusManager.csproj
+++ b/src/CloudFileStatusManager/CloudFileStatusManager.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -13,13 +13,35 @@
     <PackageProjectUrl>https://github.com/WayneKoorts/CloudFileStatusManager</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/WayneKoorts/CloudFileStatusManager</RepositoryUrl>
-    <AssemblyVersion>1.0.1.0</AssemblyVersion>
-    <FileVersion>1.0.1.0</FileVersion>
+    <AssemblyVersion>1.0.2.0</AssemblyVersion>
+    <FileVersion>1.0.2.0</FileVersion>
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     <Version>$(AssemblyVersion)</Version>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
+
+  <!-- .NET 8 -->
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net8.0' And '$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TargetFrameworkMoniker>.NETCoreApp,Version=v8.0</TargetFrameworkMoniker>
+    <NuGetTargetMoniker>net8.0</NuGetTargetMoniker>
+  </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net8.0' And '$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TargetFrameworkMoniker>.NETCoreApp,Version=v8.0</TargetFrameworkMoniker>
+    <NuGetTargetMoniker>net8.0</NuGetTargetMoniker>
+  </PropertyGroup>
+
+  <!-- .NET 9 -->
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net9.0' And '$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TargetFrameworkMoniker>.NETCoreApp,Version=v9.0</TargetFrameworkMoniker>
+    <NuGetTargetMoniker>net9.0</NuGetTargetMoniker>
+  </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net9.0' And '$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TargetFrameworkMoniker>.NETCoreApp,Version=v9.0</TargetFrameworkMoniker>
+    <NuGetTargetMoniker>net9.0</NuGetTargetMoniker>
   </PropertyGroup>
 
   <ItemGroup>
